## Working version

### New

- #13: Add lint that discourages matching a tuple using 'match' expression with single branch
  (contributed by @s-khechnev)
- #18: Add lint about unneeded mutually recursive types
  (contributed by @s-khechnev)
- Add command line switch '-skip-level-allow <bool>' to enable/disable lints
  with level=Allow. False has higher priority than per-lint command line switch
  (for example, `-no-string_concat`)
- #22: Add 'reviewer' tool to report lint's a Github review.
  (contributed by @s-khechnev)
- Expose library to parse DIFF format. It is available as 'zanuda.diff_parser' ocamlfind package.
- #28: Add lint about nested if expressions.
  (contributed by @Artem-Rzhankoff)
- #32: Add lint about constructor names that hide default constructor names 
  (contributed by @nnemakin)
- #35: Add lints that detects manual implementations of List.map/fold functions
  (contributed by @nnemakin)
- #23: Implement a trial version of the Fix module for auto-correction of lints
  (contributed by @Artem-Rzhankoff)

### Changed

- #15: Split 'string_concat' lint to check separately patterns 'a^b^c' (level=Allow) and 'List.fold_left (^)' (level=Warn).
  (reported by @edwintorok)
- #16: Calculate test coverage.
- The lint 'mutable_hashtables' now check for mutability in general: references, mutable record fields, etc.


## 1.0.0 (24-03-2023)

### Changed

- First release