@@ -1,0 +1,2 @@
+let _1 x = Format.printf "a\"%s\"b" x 
+let _2 x = Format.printf "a%Sb" x 
